# yannt

./: .gitignore  Justfile  clone-pparse.sh  clone-transformers.sh  create-bundle.sh  do  env.sh  eps.py  init-dev-bash-env.sh  pyproject.toml  rearch.md  share-links.txt
docker/: Dockerfile  Dockerfile.dev  build.sh  dev.sh  download.sh  init-dev.sh  notes.md  run.sh  yannt.sh
docker/context/: tester.sh
docker/jupyter/: README.md  run.sh
docs/: 0-overview.md  1-getting-started.md  2-file-layout.md  2-plugins.md  4-examples.md
docs/pandoc-build/: .gitignore  build-docs.sh  metadata-tail.yaml  metadata.yaml  (+1 more)
old-scripts/: build-dev-venv.sh  build-docker-local-prod.sh  build-packages.sh  clean.sh  constraints-py310.txt  dependency-notes.md  download_deps_for.sh  freeze-py311.txt  freeze-py312.txt  init-docker-local-dev.sh  install-host-upstream-pipx.sh
scripts/: build-dev-venv.sh  build-docker-local-prod.sh  build-jupyter-venv.sh  build-venv.sh  clean.sh  collector.sh  constraints-py310.txt  constraints-py311.txt  constraints-py312.txt  constraints-py313.txt  constraints-py39.txt  distclean.sh  download-all-deps.sh  download_deps_for.sh  freeze-py310.txt  init-dev.dockerfile  init-dev.sh  init-docker-local-dev.dockerfile  init-docker-local-dev.sh  init-docker-upstream-dev.sh  init-host-local-dev.sh  init-host-upstream-dev.sh  init-local-dev.sh  init-remote-dev.sh  install-host-local-pip.sh  install-host-local-pipx.sh  run-dev.sh  run-docker-local-dev.sh  start-docker-local-jupyter.sh  start-venv.sh  try-collector.sh  try_collector.sh
yannt/: pyproject.toml
(+8 files in other folders)
