[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thirdparty-yannt"
version = "0.0.1"
description = "Yet Another NN Tool"
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[project.scripts]
yannt = "thirdparty.yannt.cli:main"



