[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thirdparty-yannt"
version = "0.0.1"
description = "Yet Another NN Tool"
# Note: No idea the real version required at this time.
requires-python = ">=3.11"

dependencies = [
    "argcomplete",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[project.scripts]
yannt = "thirdparty.yannt.cli:main"



